- GCTAEventList::has_detxy()
- GCTAEventList::has_mc_id(bool&)
- GCTAEventList::has_mc_id()
- GCTAEventList::set_mc_id_names(std::vector<int>&, std::vector<std::string>&)
- GCTAEventAtom::mc_id(int&)
- GCTAEventAtom::mc_id()

The following methods have been removed:
- GFitsTable::size()

The following methods have been renamed:
- GFitsImage::size() => GFitsImage::npix()

The arguments for the following methods have been changed:
- ...

The return value of the following methods has been changed:
- ...


3. Configuration
-----------------
The Python unit tests now raise exceptions instead of exiting with a non-
zero return code so that the user is not thrown out of Python after calling
gammalib.test() (#1983).

If the code originates from the Git repository the configuration now switches
to developer mode which implies that the Python bindings are always built.
This solves the problem that occured for developers that could not get rid
of existing Python wrappers, even if they modified the Python interface
(#1985).

The shared libraries needed by the Python wrappers are now copied into a
build/gammalib directory for unit testing instead of creating a symbolic
link since on shared VM file systems symbolic links may not work (#1987).


4. Application module
---------------------
None


5. Base module
--------------
None


6. FITS I/O Interface
---------------------
FITS image type conversion constructors have been added to convert a FITS
image of any type into a specific storage class (#1986).

A map between header card keywords and header card pointers was added to
GFitsHeader to speed up the access of FITS header cards (#2120).

The GFitsImage::size() method has been renamed to GFitsImage::npix() since
the size() method overloaded the GFitsHDU::size() method (#1858).

The GFitsTable::size() method has been removed since the meaning of the
method was ambiguous. It returned the number of table columns, but the 