@@ -3,21 +3,16 @@
         * Version 1.3.0 released
         =========================
 
-        Rename GFitsImage::size() to GFitsImage::npix() (#1858)
-        Remove GFitsTable::size() method (#1857)
         Add header card keyword map to GFitsHeader for fast access (#2120)
-        Increase maximum CTA King PSF radius to 2 degrees (#2112)
         Correct set names of spatial GLON/GLAT model parameters (#2113)
+        Increase maximum CTA King PSF radius to 2 degrees (#2112)
         Support "BKG" as name of CTA background template
         Scale optimizer convergence criterion with step size (#2022)
         Put response cube loading and saving in OpenMP critical zone (#2021)
         Add GPhases class (#1996)
-        Add support for Monte Carlo identifier metadata (#1483)
-        Add GEventList::has_mc_id() and GEventAtom::mc_id() methods (#1483)
-        Add GEventList::has_phase() and GEventList::has_detxy() methods (#1982)
+        Allow fitting of scale parameter in composite models (#1992)
         Add GEventList::append_column() method (#1991)
         Add scalar addition and subtraction operators to matrix classes (#1990)
-        Allow fitting of scale parameter in composite models (#1992)
         Add GCTAAeff::ebounds() method (#1989)
         Add GEbounds::emin() and GEbounds::emax() setter methods (#1989)
         Protect GEbounds::set_lin() and set_log() methods from invalid arguments (#1989)
@@ -26,22 +21,28 @@
         Added FITS image conversion operators (#1986)
         If code originates from Git, always compile the Python bindings (#1985)
         Raise exception instead of exiting with return code in Python tests (#1983)
+        Add GEventList::has_phase() and GEventList::has_detxy() methods (#1982)
         Enhance precision of GCTAEdisp2D::compute_ebounds_src
         Add conversion methods between GEbounds and GEnergies (#1977)
+        Do no longer interpret a CTA calibration database as file path (#1969)
+        GWcs now supports CD keywords instead of CDELT (#1951)
         Add GModelSpectralSmoothBrokenPlaw class (#1948)
         Implement lazy loading of energy dispersion in GCTAEdisp2D (#1940)
         Add GCTARoi::contains method
-        Do no longer interpret a CTA calibration database as file path (#1969)
         Add GCTAResponseIrf::rspname() method
-        GWcs now supports CD keywords instead of CDELT (#1951)
         Correct GCTAPsf2D containment radius computation (#1876)
         Add GFilename::type() method (#1863)
+        Rename GFitsHDU::size() to GFitsHDU::cards() (#1859)
+        Rename GFitsImage::size() to GFitsImage::npix() (#1858)
+        Remove GFitsTable::size() method (#1857)
         Add GLS and SFL WCS projections (#1851)
         Add GModelSpatialRadialProfile class (#1520)
         Add GModelSpatialRadialProfileGauss class (#1520)
         Add GModelSpatialRadialProfileDMBurkert class (#1520)
         Add GModelSpatialRadialProfileDMEinasto class (#1520)
         Add GModelSpatialRadialProfileDMZhao class (#1520)
+        Add support for Monte Carlo identifier metadata (#1483)
+        Add GEventList::has_mc_id() and GEventAtom::mc_id() methods (#1483)
         GModelSpectralNodes throws exception for non-positive energy or intensity (#990)
 
 
